Add Prisma setup and reviews functionality
This commit adds Prisma ORM integration along with a complete reviews system, including:

- Database schema with Review and Contact models - API endpoints for fetching and
creating reviews - Review components with rating system and form validation -
Client-side hooks for managing reviews state and carousel - Type definitions for reviews
and forms

The body adds clarity about the scope of changes since they touch multiple parts of the
application. But the subject line concisely captures the core purpose.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset"
   },
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "next": "15.4.5",
+    "@prisma/client": "^5.20.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,6 +29,7 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "prisma": "^5.20.0"
   }
 }
